Corrected line spacing issues, fixed button overflow on spanish version.

--- a/public/javascripts/SVLabel/css/svl-onboarding.css
+++ b/public/javascripts/SVLabel/css/svl-onboarding.css
@@ -137,5 +137,5 @@
 }
 
 .tutorial-spacer {
-    padding-bottom: 20px;
+    padding-bottom: 8px;
 }
